--- a/effective_ansible/sec3/linux_configuration/roles/common/users/templates/user_sudoers.j2
+++ b/effective_ansible/sec3/linux_configuration/roles/common/users/templates/user_sudoers.j2
@@ -1,1 +1,1 @@
-{{ item.key }} ALL=(ALL) /usr/sbin/swapon, /usr/sbin/swapoff, /usr/bin/chmod
+{{ item.key }} ALL=(ALL) /usr/sbin/swapon, /usr/sbin/swapoff, /usr/bin/chown
